[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
# odra = { version = "0.2.0", default-features = false }
odra = { git = "https://github.com/odradev/odra", branch = "0.2.0", default-features = false }

[features]
default = ["mock-vm"]
mock-vm = ["odra/mock-vm"]
casper = ["odra/casper"]
